--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,9 +1,24 @@
+# == Schema Information
+#
+# Table name: products
+#
+#  id          :integer          not null, primary key
+#
+#  title       :string(255)
+#  description :text
+#  image_url   :string(255)
+#  price       :decimal(8, 2)
+#
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  description: MyText
-  image_url: MyString
+  title: 'Book One'
+  description: 'Book One description'
+  image_url: 'book_one.png'
   price: 9.99
 
 two:
