--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -14,13 +14,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Dave Thomas
   address: MyText
-  email: MyString
-  pay_type: MyString
+  email: dave@example.org
+  pay_type: Check
 
 two:
   name: MyString
   address: MyText
   email: MyString
-  pay_type: MyString
+  pay_type: Credit Card
