--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -9,18 +9,15 @@
 #  updated_at :datetime
 #  quantity   :integer          default(1)
 #  order_id   :integer
-#
-# Indexes
-#
-#  index_line_items_on_order_id  (order_id)
+#  price      :decimal(8, 3)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  product_id:
-  cart_id:
+  product: ruby
+  order: one
 
 two:
-  product_id:
-  cart_id:
+  product: ruby
+  cart: one
